<resources>
    <string name="app_name">RecipeApp</string>
    <string name="name_priyanka_uzlah">Priyanka Uzlah</string>
    <string name="email_priyankauzlah_gmail_com">priyankauzlah@gmail.com</string>
    <string name="txt_more">More</string>
    <string name="txt_top_menu">Top Menu</string>
    <string name="txt_nasi_goreng">Nasi Goreng</string>
    <string name="txt_sate">Sate</string>
    <string name="txt_siomay">Siomay</string>
    <string name="txt_batagor">Batagor</string>
    <string name="txt_soto">Soto</string>
    <string name="txt_gudeg">Gudeg</string>
    <string name="txt_gado_gado">Gado - Gado</string>
    <string name="txt_bakso">Bakso</string>
    <string name="image_view">Image View</string>
    <string name="tv_bakmi">Bakmi</string>
    <string-array name="name_food">
        <item>Soto</item>
        <item>Hash Brown</item>
        <item>Muffins</item>
        <item>Brussels Sprouts</item>
        <item>Lentil and Ham Soup</item>
        <item>Miso Soup</item>
        <item>California Italian Soup</item>
        <item>Russian Mushroom and Potato Soup</item>
        <item>Chicken Chilaquiles Rojas</item>
        <item>Chicken Enchiladas</item>
        <item>Juicy Roasted Chicken</item>
        <item>Zucchini Bread</item>
        <item>Buttermilk Pie</item>
        <item>Mini Skillet Buttermilk-Pear Pies</item>
        <item>Starter Smoothie</item>
        <item>Razzy Blue Smoothie</item>
        <item>Rigatoni alla Genovese</item>
        <item>Macaroni and Cheese</item>
        <item>Mom Sykes Hungarian Goulash</item>
        <item>RumChata® Pudding Shots</item>
        <item>French 75 Jell-O® Shots</item>
        <item>Jalapeno Margaritas</item>
        <item>Spicy Tuna Rolls</item>
        <item>Kabobs</item>
        <item>Chinese Lions Head Soup</item>
    </string-array>
    <string-array name="desc_food">
        <item>Soto is a traditional Indonesian soup mainly composed of broth, meat, and vegetables. Many traditional soups are called soto, whereas foreign and Western influenced soups are called sop. Soto is sometimes considered Indonesians national dish, as it is served from Sumatra to Papua, in a wide range of variations</item>
        <item>Hash browns, also spelled hashed browns, are a popular American breakfast dish, consisting of finely chopped potatoes that have been fried until browned. Hash browns first started appearing on breakfast menus in New York City in the 1890s.</item>
        <item>A muffin is an individual-sized, baked product. It can refer to two distinct items, a part-raised flatbread that is baked and then cooked on a griddle and a cupcake-like quickbread that is chemically leavened and then baked in a mold.</item>
        <item>Sweet and tart balsamic vinegar pairs well with the bitterness of Brussels sprouts; the bacon adds a smokey flavor. After 10 minutes, there is still some bite to the sprouts; add a few more minutes for a softer texture, if desired.</item>
        <item>Come home at the end of the day to a richly spiced broth filled with lentils, ham and veggies. Pair it up with cornmeal muffins and you have a great meal!</item>
        <item>Make your very own Japanese miso soup from scratch. Its easy to do at home! Perfect for an appetizer or light, warming lunch.</item>
        <item>This is my variation of a standard recipe. I like fresh basil and a little lemon rind, so those are basically my only changes. This is a quick and easy soup with flavors that impress all.</item>
        <item>I make this soup every Halloween and is the signal to the family that the cool weather has arrived. I have been making it for 15 years now and out of all the soups I make, it is still everyones favorite. Enjoy!</item>
        <item>One of my favorite comfort foods from growing up in Tucson. It is great for a potluck or party and you will get lots of compliments from your guests! This is a roja version but there is a verde style, too. Both are great and can be made hot or mild depending upon your heat tolerances or preferences. Serve with your favorite salsa, if desired.</item>
        <item>Enchiladas made easy! Garnish with diced tomatoes, shredded lettuce, and any of your favorites!</item>
        <item>My grandmothers recipe for roasted chicken. We are German and she used to do it this way all the time. I never have had a chicken this juicy before; this little trick works and makes the people eating it go silent. Its funny. We nibble on the celery after.</item>
        <item>Really, really good and moist- my kids eat it as quickly as I can make it. Bread will freeze well, and keep in refrigerator for weeks.</item>
        <item>This old-fashioned pie is wonderful to freeze and to have on hand for unexpected guests!</item>
        <item>Baking pies in mini skillets is a great way to control portions. Enjoy these mini skillet poached pear and buttermilk pies with whipped cream or ice cream if desired.</item>
        <item>Smoothies are an easy way to get more fruits and vegetables into your day, but calories can add up fast. For a smoothie thats only about 200 calories, follow our formula and use 1 cup fresh fruit or vegetables and or cooked, frozen vegetables + 1 cup fruit juice. Blueberries and grape juice are featured here.</item>
        <item>This naturally sweet and creamy, frosty cold smoothie packs a lot of flavor and a nutritious punch.</item>
        <item>I have no idea why this amazingly flavorful Genovese-style meat sauce isnt way more popular than it is. Its quite simply one of the best pasta sauces you will ever taste, thanks to a very slow cooking process, and massive amounts of onions.</item>
        <item>A very quick and easy fix to a tasty side-dish. Fancy, designer mac and cheese often costs forty or fifty dollars to prepare when you have so many exotic and expensive cheeses, but they arent always the best tasting. This recipe is cheap and tasty.</item>
        <item>The lemon flavor gives you a pleasant surprise in this tender goulash served over egg noodles.</item>
        <item>These are even better than Jell-O® shots. You could also serve these after dinner in place of dessert.</item>
        <item>The fanciest cocktail goes jiggly - bubbles and all.</item>
        <item>Margaritas with a spicy kick! The agave nectar and fresh lime juice make a big difference. Include the jalapeno seeds for an extra kick!</item>
        <item>Even if you are new to sushi making, this recipe for spicy tuna rolls is easy to make at home.</item>
        <item>Grilled steak and chicken that doesnt dry out on the grill, but stays moist and flavorful. These kabobs are simple to make, and delicious to eat. Skewered meat with peppers, onions, and mushrooms in a honey teriyaki sauce.</item>
        <item>This is my familys version of lions head soup and for me it is the best type of comfort food! It is best served with white sticky rice, and wonderful enjoyed on a cold winter day.</item>
    </string-array>
</resources>