<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_40dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="@dimen/_80dp"
            android:layout_height="@dimen/_80dp"
            android:src="@drawable/photo_profile" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/name_priyanka_uzlah"
            android:textSize="@dimen/_24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_thin"
                android:text="@string/email_priyankauzlah_gmail_com"
                android:textSize="@dimen/_16sp" />

            <Button
                android:id="@+id/btn_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/txt_more" />

        </LinearLayout>

        <View
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:layout_marginTop="@dimen/_32dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/txt_top_menu"
            android:textSize="@dimen/_20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nasi_goreng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4dp"
                android:background="@drawable/shape_text"
                android:text="@string/txt_nasi_goreng" />

            <TextView
                android:id="@+id/sate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4dp"
                android:background="@drawable/shape_text"
                android:text="@string/txt_sate" />

            <TextView
                android:id="@+id/siomay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4dp"
                android:background="@drawable/shape_text"
                android:text="@string/txt_siomay" />

            <TextView
                android:id="@+id/batagor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4dp"
                android:background="@drawable/shape_text"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/txt_batagor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/soto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4dp"
                android:background="@drawable/shape_text"
                android:text="@string/txt_soto" />

            <TextView
                android:id="@+id/gudeg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4dp"
                android:background="@drawable/shape_text"
                android:text="@string/txt_gudeg" />

            <TextView
                android:id="@+id/gado_gado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4dp"
                android:background="@drawable/shape_text"
                android:text="@string/txt_gado_gado" />

            <TextView
                android:id="@+id/bakso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4dp"
                android:background="@drawable/shape_text"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/txt_bakso" />
        </LinearLayout>

        <View
            android:id="@+id/bottom_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:layout_marginTop="@dimen/_32dp"
            android:background="@android:color/darker_gray" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>